--- a/gnews/1.md
+++ b/gnews/1.md
@@ -1,32 +1,60 @@
 ---
-title: 欧盟“全球门户”投资计划联手非盟对抗中共&#8221;一带一路&#8221;
+title: 樱花深度报道┃习近平的“末日”会让中国和世界陷入战争吗？（上）
 ---
-`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/2036268/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2036280/)
 
-**作者:  **青衣
-![](https://assets.gnews.org/wp-content/uploads/2022/02/3-64.jpg)
-欧盟和非盟(AU)第六次峰会2月18日在布鲁塞尔闭幕，双方签署“更新伙伴关系”。（图片来自网络）
+编译：东京樱花团/Hopkins
 
-欧盟近日在与非盟的第六次峰会上承诺启动1500亿欧元的“全球门户”投资计划，以对抗中共的“一带一路”倡议。
+（内容摘要）
+• 中国看起来威武的领导人习近平有“大量的国内敌人”。 ——国际战略研究协会主席兼《国防与外交战略政策》（ Defense & Foreign Affairs Strategic Policy）主编格雷戈里·科普利（Gregory Copley）于 2022 年 2 月在盖斯通研究所（Gatestone Institute）说。
 
-据《阿波罗新闻网》2月20日报道，欧洲联盟和非洲联盟（AU）第六次峰会于2月18日在布鲁塞尔闭幕，双方签署了“更新的伙伴关系”。欧盟领导人表示希望与非洲国家重新接触，加强和调整欧洲和非洲国家之间的经济和战略伙伴关系。
+• 习近平制造了这种反对意见。在 2012 年底成为中国的统治者后，他从其他人手中攫取了权力，然后在清洗中监禁了数万名反对者，他称之为“反腐败”运动。
 
-欧盟承诺特别启动一项1500亿欧元的 “全球门户”（Global Gateway）投资计划，而这一投资战略主要是为对抗中共的“一带一路”倡议。
+• 北京陷入恐慌，上个月新增信贷总额近万亿美元，创历史新高…. 如果包括所谓的“隐性债务”，该国的债务总额大约在 350% 左右国内生产总值。
 
-非盟主席、塞内加尔总统萨勒（Macky Sall）表示，欧非双方在地理、历史认识、人道关系以及尊重主权等平等关系的共同愿景之下建立合作，旨在巩固团结、安全、和平、可持续经济发展的新伙伴关系。
+• 毫不奇怪，中国公司现在正在违约。债务危机如此严重，它可以拖垮中国的经济——以及国家的金融和政治体系。
 
-欧盟执行委员会主席冯德莱恩（Ursula von der Leyen）则强调，欧洲是非洲第一大贸易伙伴，也是第一大投资伙伴。欧盟将继续致力于维持与非洲的可信任经济伙伴关系。非洲也是欧盟战略大投资全球门户投资计划的第一个区域受益者，欧盟与非洲的”全球门户“投资计划将超过一千五百亿欧元。
+• 在习最近的烦恼中，匿名作者“方舟与中国”写了一篇42000字题为《客观评价习近平》的文章。1 月 19 日在中国赞助的 6park 网站上发布的这篇反习长篇似乎是由前领导人江泽民领导的共产党上海帮派的几名成员的作品。江派一直在对习近平进行狙击，现在正在带头对他发起攻击。
 
-据悉，1500亿欧元将承担帮助非洲人实现其想要的项目，并优先考虑交通基础设施、数字化转型、可再生能源、教育等。冯德莱恩表示，“全球门户”倡议植根于欧洲和非洲所承诺的价值观，如透明度、可持续性、善治，以及对人民福祉的关注。
+• 不幸的是，习近平的问题可能会成为我们共同的问题。由于各种内部政治原因，他的风险门槛很低，并且有很多理由选择通过与其他一些国家发动战争来转移精英批评和民众的不满情绪。
 
-除此之外，欧盟还表示将致力于帮助非洲军队执行和平任务和行动，并为他们提供培训以及加强设备和能力。
+• 中国共产党一直认为它与美国的斗争是存在的——2019 年 5 月，官方《人民日报》宣布对美国发动“人民战争”——并且这种敌意在过去一年变得更加明显。
 
-新闻链接：
+• 恶毒的反美主义表明习近平正在为打击美国寻找正当理由。中国政权经常利用其媒体先发出警告，然后再发出信号。
 
-[https://www.aboluowang.com/2022/0220/1711021.html?utm\_source=dlvr.it&utm\_medium=twitter](https://www.aboluowang.com/2022/0220/1711021.html?utm_source=dlvr.it&amp;utm_medium=twitter)
+• 美国现在已经被警告了。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/image-793.png)（图片说明）习近平于2020年5月28日在北京人民大会堂。  (Photo by Kevin Frayer/Getty Images)
+中共领导人习近平制造了他的反对意见。在 2012 年底成为统治者后，他从其他人手中攫取了权力，然后在清洗中监禁了数以万计的反对者，他称之为“反腐败”运动。不幸的是，习近平的问题可能会成为我们的问题。恶毒的反美主义表明习近平正在为打击美国寻找正当理由。
 
-* * *
+当卡车司机接管加拿大首都渥太华并关闭通往美国的边境入境点时，一些人称其为“全国性起义”。民主世界各地都发生了大规模示威游行。人们已经受够了两年的授权和其他疾病控制措施。
 
+在世界上人口最多的州，情况并非如此，该州保持着世界上最严格的 COVID-19 控制。众所周知，中华人民共和国境内没有针对抗冠状病毒努力的民众抗议活动。
+
+然而，中国并不稳定，正如反对派人士最近发表的一篇文章（见下文）所说，习近平正面临着他的“末日”。
+
+起义不是在整个社会，而是在共产党的高层。
+
+正如国际战略研究协会会长格雷戈里·科普利（Gregory Copley）告诉盖茨通（Gatestone）的那样，中国看起来威武的领导人习近平有“大量的国内敌人”。
+
+习近平制造了这种反对意见。在 2012 年底成为中国的统治者后，他从其他人手中攫取了权力，然后在清洗中监禁了数万名反对者，他称之为“反腐败”运动。
+
+习近平还利用这次Covid-19病毒发挥了很大的作用。正如《国防与外交战略政策》主编科普利所指出的，“习近平的‘零新冠病毒’政策实际上与其说是为了阻止新冠病毒的传播，不如说是为了压制他的内部敌人，无论是在公开和党内。”
+
+“大阵”现在开始反击。习近平在处理该国停滞不前的经济时最为脆弱。一方面，针对 COVID 的严厉运动——大规模检测、细致的接触者追踪、严格的封锁——当然削弱了消费，而消费是北京吹捧的经济核心。
+
+北京正惊慌失措，上个月新增信贷总额近万亿美元，创历史新高。中国的技术专家也变得狡猾，开始采用广为人知的环球资源合伙人安德鲁·科利尔（Andrew Collier）所说的“影子刺激”——由地方政府及其实体提供的刺激，以使中央政府能够避免报告支出。
+
+中国需要一个充满活力的经济来偿还巨额债务，这主要是因为北京过度刺激经济，特别是从 2008 年开始。如果包括所谓的“隐性债务”，该国的总债务接近 350%国内生产总值。
+
+毫不奇怪，中国公司现在正在违约。债务危机如此严重，它可以拖垮中国的经济——以及国家的金融和政治体系。
+
+（未完待续）
+
+信息来源：[Will Xi Jinping’s “End Of Days” Plunge China & The World Into War?](https://www.zerohedge.com/geopolitical/will-xi-jinpings-end-days-plunge-china-world-war)
+
+*编辑：东京樱花团/喜马拉雅的微尘
+发布：东京樱花团/平安卿卿*
+![](https://assets.gnews.org/wp-content/uploads/2022/02/%E4%BA%8C%E7%BB%B4%E7%A0%81.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
