--- a/gnews/2.md
+++ b/gnews/2.md
@@ -1,31 +1,29 @@
 ---
-title: 中共军舰用激光照射澳洲巡逻机 此军事行为或危及生命
+title: 欧盟“全球门户”投资计划联手非盟对抗中共&#8221;一带一路&#8221;
 ---
-`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/2036255/)
+`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/2036268/)
 
 **作者:  **青衣
-![](https://assets.gnews.org/wp-content/uploads/2022/02/5-39.jpg)
-图为 P-8A资料图（图片来自网络）
+![](https://assets.gnews.org/wp-content/uploads/2022/02/3-64.jpg)
+欧盟和非盟(AU)第六次峰会2月18日在布鲁塞尔闭幕，双方签署“更新伙伴关系”。（图片来自网络）
 
-澳大利亚的一架海上巡逻机日前在飞行时遭到激光照射攻击。据探测，该激光来自一艘中共的海军军舰。
+欧盟近日在与非盟的第六次峰会上承诺启动1500亿欧元的“全球门户”投资计划，以对抗中共的“一带一路”倡议。
 
-据《大纪元》2月19日报道，澳大利亚一架P-8A“波塞冬”（Poseidon）海上巡逻机在本国北部海域飞行时，遭到来自一艘中共军舰的明晃晃的激光照射攻击。澳大利亚国防部在一份声明中表示，“用激光照射飞机是严重的安全事件，该行为有可能危及生命” 。强烈谴责这种“不专业及不安全的军事行为”。
+据《阿波罗新闻网》2月20日报道，欧洲联盟和非洲联盟（AU）第六次峰会于2月18日在布鲁塞尔闭幕，双方签署了“更新的伙伴关系”。欧盟领导人表示希望与非洲国家重新接触，加强和调整欧洲和非洲国家之间的经济和战略伙伴关系。
 
-澳洲国防部进一步指出，事件发生时，该艘中共军舰正与另一艘中共军舰一起经过阿拉弗拉海（Arafura Sea）向东航行。
+欧盟承诺特别启动一项1500亿欧元的 “全球门户”（Global Gateway）投资计划，而这一投资战略主要是为对抗中共的“一带一路”倡议。
 
-此前，澳洲军机也曾遭到过来自中共国的激光袭击。澳大利亚广播公司（ABC）的一份报告显示，2019年，澳洲飞行员在南海上空进行军事演习时，曾遭遇中共海上民兵发射的一系列激光攻击，致使飞行员被迫在军舰上降落，并接受体检。
+非盟主席、塞内加尔总统萨勒（Macky Sall）表示，欧非双方在地理、历史认识、人道关系以及尊重主权等平等关系的共同愿景之下建立合作，旨在巩固团结、安全、和平、可持续经济发展的新伙伴关系。
 
-除了澳洲之外，美国军机也同样多次遭到过中共国的激光攻击。2020年2月17日，一艘中共海军驱逐舰向正在国际水域上空飞行的美国海军P-8A“波塞冬”海上巡逻机进行激光照射。美国太平洋舰队当时也同样表示，这种行为“不专业、不安全”。
+欧盟执行委员会主席冯德莱恩（Ursula von der Leyen）则强调，欧洲是非洲第一大贸易伙伴，也是第一大投资伙伴。欧盟将继续致力于维持与非洲的可信任经济伙伴关系。非洲也是欧盟战略大投资全球门户投资计划的第一个区域受益者，欧盟与非洲的”全球门户“投资计划将超过一千五百亿欧元。
 
-据了解，当时那架美军P-8A巡逻机上的传感器检测到中共驱逐舰使用的是肉眼看不见的激光，而武器级激光有可能对服役军人造成严重伤害，并可能损坏各种船舶和飞机系统。
+据悉，1500亿欧元将承担帮助非洲人实现其想要的项目，并优先考虑交通基础设施、数字化转型、可再生能源、教育等。冯德莱恩表示，“全球门户”倡议植根于欧洲和非洲所承诺的价值观，如透明度、可持续性、善治，以及对人民福祉的关注。
 
-此外，在2018年5月，美国五角大楼官员还曾披露，中共驻非洲吉布提军事人员使用高功率激光束瞄准美国飞行员，导致两名美国飞行员受轻伤。
-
-中共屡次用激光作为武器对外国军机做出一系列的危险行为，恐怕已不仅仅只是“不专业、不安全”这么简单了，这完全是充满挑衅、极其危险的攻击性军事行为。然而，如此令人发指的恐怖主义行为一而再、再而三的发生，美欧国家竟然无法有效制止，中共反而变本加厉，这让人感到不可思议。
+除此之外，欧盟还表示将致力于帮助非洲军队执行和平任务和行动，并为他们提供培训以及加强设备和能力。
 
 新闻链接：
 
-[https://www.epochtimes.com/gb/22/2/19/n13589593.htm](https://www.epochtimes.com/gb/22/2/19/n13589593.htm)
+[https://www.aboluowang.com/2022/0220/1711021.html?utm\_source=dlvr.it&utm\_medium=twitter](https://www.aboluowang.com/2022/0220/1711021.html?utm_source=dlvr.it&amp;utm_medium=twitter)
 
 * * *
 
