--- a/gnews/3.md
+++ b/gnews/3.md
@@ -1,33 +1,31 @@
 ---
-title: 欧盟就“禁诉令”再向世贸组织提起对中共国的诉讼
+title: 中共军舰用激光照射澳洲巡逻机 此军事行为或危及生命
 ---
-`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/2036243/)
+`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/2036255/)
 
 **作者:  **青衣
-![](https://assets.gnews.org/wp-content/uploads/2022/02/3-64.jpg)
-（图片来自网络）
+![](https://assets.gnews.org/wp-content/uploads/2022/02/5-39.jpg)
+图为 P-8A资料图（图片来自网络）
 
-欧盟2月18日就“禁诉令”再次向世界贸易组织（WTO）提起对中共国的诉讼。这是欧盟在过去3周内对中共国提起的第2起世贸组织诉讼，而上一起是关于中共与立陶宛就涉台问题发生的经贸纠纷。
+澳大利亚的一架海上巡逻机日前在飞行时遭到激光照射攻击。据探测，该激光来自一艘中共的海军军舰。
 
-据《阿波罗新闻网》2月20日报道，欧盟18日向世界贸易组织（WTO）提起对中共国的诉讼。欧盟委员会执行副主席、贸易专员东布罗夫斯基（Valdis Dombrovskis）在声明中强调，启动世贸组织维权诉讼是为保护欧盟充满活力的高科技产业，确保欧盟在研发未来创新技术方面的领先地位。当高科技产业的技术被非法使用时，欧盟公司有权在公正条件下寻求正义。
+据《大纪元》2月19日报道，澳大利亚一架P-8A“波塞冬”（Poseidon）海上巡逻机在本国北部海域飞行时，遭到来自一艘中共军舰的明晃晃的激光照射攻击。澳大利亚国防部在一份声明中表示，“用激光照射飞机是严重的安全事件，该行为有可能危及生命” 。强烈谴责这种“不专业及不安全的军事行为”。
 
-欧盟指出，自2020年8月以来，中共国法院一直在发布所谓“禁诉令”的裁决，对拥有高科技专利的欧盟公司施加压力，阻止这些公司合法保护它们的技术。中共法院还利用重罚的威胁，阻止欧洲公司向外国法院起诉。这使得欧洲高科技公司在争取它们的权利时处于明显的劣势。而中共国制造商已利用这些反诉禁令，从更便宜甚至免费获得欧洲技术中得到利益。
+澳洲国防部进一步指出，事件发生时，该艘中共军舰正与另一艘中共军舰一起经过阿拉弗拉海（Arafura Sea）向东航行。
 
-所谓“禁诉令”，指的是禁止当事方在某法院管辖范围之外的其他法庭提起诉讼的司法命令。欧盟称，华为、小米、中兴、奥普（OPPO）等中共国企业利用中共司法当局颁布的跨境“禁诉令”，迫使诸多欧盟企业的相关专利许可费减半。
+此前，澳洲军机也曾遭到过来自中共国的激光袭击。澳大利亚广播公司（ABC）的一份报告显示，2019年，澳洲飞行员在南海上空进行军事演习时，曾遭遇中共海上民兵发射的一系列激光攻击，致使飞行员被迫在军舰上降落，并接受体检。
 
-欧盟在声明中进一步指出，中（共）国严格限制拥有关键技术（如3G、4G和5G）权利的欧盟公司，在它们的专利被诸如中（共）国手机制造商等非法使用或没有适当补偿的情况下，不仅不去保护这些欧盟公司的正当权利，相反，在中（共）国境外诉诸知识产权诉讼的专利持有企业，往往会在中（共）国面临巨额罚款，使这些企业面临压力，被迫以低于市场价格的许可费做出和解。
+除了澳洲之外，美国军机也同样多次遭到过中共国的激光攻击。2020年2月17日，一艘中共海军驱逐舰向正在国际水域上空飞行的美国海军P-8A“波塞冬”海上巡逻机进行激光照射。美国太平洋舰队当时也同样表示，这种行为“不专业、不安全”。
 
-欧盟委员会还举例说，爱立信、诺基亚等企业如果违反了中共司法当局的跨境“禁诉令”，就可能面临每天13万欧元的罚款，其驻华高管甚至还有可能因此遭到拘捕。
+据了解，当时那架美军P-8A巡逻机上的传感器检测到中共驱逐舰使用的是肉眼看不见的激光，而武器级激光有可能对服役军人造成严重伤害，并可能损坏各种船舶和飞机系统。
 
-欧盟认为，这些做法是中共整体战略的一部分，目的是迫使外国企业以更低的价格向中共国企业转让3G、4G、5G通信技术。
+此外，在2018年5月，美国五角大楼官员还曾披露，中共驻非洲吉布提军事人员使用高功率激光束瞄准美国飞行员，导致两名美国飞行员受轻伤。
 
-欧盟表示，中共国的这一政策严重损害了欧洲的创新能力和经济增长，剥夺了欧洲企业行使保持其技术领先地位的权利。
-
-这是欧盟在过去3周内对中共国提起的第2起世贸组织诉讼。不久前，欧盟还就中共与立陶宛因涉台问题发生的经贸纠纷，向世贸组织提出了对中共国的诉讼。世贸组织对于这两起诉讼将会做出怎样的判决已成为全世界关注的焦点。
+中共屡次用激光作为武器对外国军机做出一系列的危险行为，恐怕已不仅仅只是“不专业、不安全”这么简单了，这完全是充满挑衅、极其危险的攻击性军事行为。然而，如此令人发指的恐怖主义行为一而再、再而三的发生，美欧国家竟然无法有效制止，中共反而变本加厉，这让人感到不可思议。
 
 新闻链接：
 
-[https://www.aboluowang.com/2022/0220/1711021.html?utm\_source=dlvr.it&utm\_medium=twitter](https://www.aboluowang.com/2022/0220/1711021.html?utm_source=dlvr.it&amp;utm_medium=twitter)
+[https://www.epochtimes.com/gb/22/2/19/n13589593.htm](https://www.epochtimes.com/gb/22/2/19/n13589593.htm)
 
 * * *
 
