--- a/gnews/4.md
+++ b/gnews/4.md
@@ -1,31 +1,35 @@
 ---
-title: 普京在乌克兰紧张局势中主持周六的核演习
+title: 欧盟就“禁诉令”再向世贸组织提起对中共国的诉讼
 ---
-`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/2036235/)
+`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/2036243/)
 
-编译：花岗岩
-![](https://assets.gnews.org/wp-content/uploads/2022/02/2-86.jpg)
+**作者:  **青衣
+![](https://assets.gnews.org/wp-content/uploads/2022/02/3-64.jpg)
+（图片来自网络）
 
+欧盟2月18日就“禁诉令”再次向世界贸易组织（WTO）提起对中共国的诉讼。这是欧盟在过去3周内对中共国提起的第2起世贸组织诉讼，而上一起是关于中共与立陶宛就涉台问题发生的经贸纠纷。
 
-图片来源：网络截图
+据《阿波罗新闻网》2月20日报道，欧盟18日向世界贸易组织（WTO）提起对中共国的诉讼。欧盟委员会执行副主席、贸易专员东布罗夫斯基（Valdis Dombrovskis）在声明中强调，启动世贸组织维权诉讼是为保护欧盟充满活力的高科技产业，确保欧盟在研发未来创新技术方面的领先地位。当高科技产业的技术被非法使用时，欧盟公司有权在公正条件下寻求正义。
 
-据合众国际社2月19日报道，俄罗斯总统普京在可能入侵乌克兰的持续紧张局势下，在周六主持了核演习。克里姆林宫说，俄罗斯在海上发射了具有核能力的高超音速导弹和巡航导弹，普京和白俄罗斯总统亚历山大·卢卡申科在克里姆林宫的情况室观看了演习。
+欧盟指出，自2020年8月以来，中共国法院一直在发布所谓“禁诉令”的裁决，对拥有高科技专利的欧盟公司施加压力，阻止这些公司合法保护它们的技术。中共法院还利用重罚的威胁，阻止欧洲公司向外国法院起诉。这使得欧洲高科技公司在争取它们的权利时处于明显的劣势。而中共国制造商已利用这些反诉禁令，从更便宜甚至免费获得欧洲技术中得到利益。
 
-克里姆林宫在周四表示，如果美国不同意莫斯科提出的禁止乌克兰和格鲁吉亚，这两个曾是苏联一部分的分离国家加入北约的要求，俄罗斯可能会“被迫做出回应”。
+所谓“禁诉令”，指的是禁止当事方在某法院管辖范围之外的其他法庭提起诉讼的司法命令。欧盟称，华为、小米、中兴、奥普（OPPO）等中共国企业利用中共司法当局颁布的跨境“禁诉令”，迫使诸多欧盟企业的相关专利许可费减半。
 
-在美国和北约认为乌克兰拒绝了这一要求后克里姆林宫随即周五宣布，战略导弹试验将在周六进行。
+欧盟在声明中进一步指出，中（共）国严格限制拥有关键技术（如3G、4G和5G）权利的欧盟公司，在它们的专利被诸如中（共）国手机制造商等非法使用或没有适当补偿的情况下，不仅不去保护这些欧盟公司的正当权利，相反，在中（共）国境外诉诸知识产权诉讼的专利持有企业，往往会在中（共）国面临巨额罚款，使这些企业面临压力，被迫以低于市场价格的许可费做出和解。
 
-美国国防部长劳埃德·奥斯汀（Lloyd Austin）周六警告说，俄罗斯正朝着有可能入侵乌克兰的方向发展，因此周六的演习似乎是精心安排的，以阻止西方军队在日益紧张的局势下介入乌克兰。
+欧盟委员会还举例说，爱立信、诺基亚等企业如果违反了中共司法当局的跨境“禁诉令”，就可能面临每天13万欧元的罚款，其驻华高管甚至还有可能因此遭到拘捕。
 
-奥斯汀在立陶宛维尔纽斯与波罗的海领导人会晤后说俄罗斯正在展开行动，现在已经准备好进行攻击。他还重申了美国总统拜登周五的说法，即普京已经做出了入侵乌克兰的决定。
+欧盟认为，这些做法是中共整体战略的一部分，目的是迫使外国企业以更低的价格向中共国企业转让3G、4G、5G通信技术。
 
-美国副总统卡马拉·哈里斯周六在德国参加慕尼黑安全会议时补充说，美国和盟国将实施经济处罚，包括“那些同谋和援助指导”可能“无端入侵”乌克兰的人。
+欧盟表示，中共国的这一政策严重损害了欧洲的创新能力和经济增长，剥夺了欧洲企业行使保持其技术领先地位的权利。
 
-另外，据《华盛顿邮报》报道，，乌克兰国防部长奥列克西·雷兹尼科夫（Oleksii Reznikov）周六说，在过去几天俄罗斯支持的分离主义分子在乌克兰东部的炮击升级的报道中，已经造成两名乌克兰士兵死亡，另有五人受伤。
+这是欧盟在过去3周内对中共国提起的第2起世贸组织诉讼。不久前，欧盟还就中共与立陶宛因涉台问题发生的经贸纠纷，向世贸组织提出了对中共国的诉讼。世贸组织对于这两起诉讼将会做出怎样的判决已成为全世界关注的焦点。
 
-国防部长告诉《邮报》，乌克兰军队不打算发动攻势，但基辅将“不允许对我们部队的阵地和人类居住区进行射击而不受惩罚”。
+新闻链接：
 
-新闻来源：[Putin presides over nuclear drills Saturday amid Ukraine tensions](https://www.upi.com/Top_News/World-News/2022/02/19/nuclear-drills-ukraine-tensions/3681645294399/)
+[https://www.aboluowang.com/2022/0220/1711021.html?utm\_source=dlvr.it&utm\_medium=twitter](https://www.aboluowang.com/2022/0220/1711021.html?utm_source=dlvr.it&amp;utm_medium=twitter)
+
+* * *
 
  
 
