--- a/gnews/5.md
+++ b/gnews/5.md
@@ -1,26 +1,31 @@
 ---
-title: 渥太华抓捕了100名“为自由护航”组织者
+title: 普京在乌克兰紧张局势中主持周六的核演习
 ---
-`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/2036214/)
+`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/2036235/)
 
-翻译：  Evalu
-![](https://assets.gnews.org/wp-content/uploads/2022/02/1-306.jpg)
-图片来源： www.iask.ca
-零对冲网2月19日报道，渥太华警察抓捕了100名“为自由护航”抗议组织者，包括塔玛拉·里奇，帕特·金和克里斯·巴勃，他们于周五被捕，周六首次面对法官，他们被一系列最轻指控传唤，包括指导恶作剧，指导服从法庭和堵住警察。
-
-警察周五采用一系列进攻性技术冲散抗议者，渥太华警察否认他们用催泪瓦斯，相反，他们说是抗议者用汽油对付他们。
-
-法官让巴勃支付10万债券以保释，他目前没有在公众面前露面，而金和里奇和其他人周六出现在法院，对巴勃的保释金最高，因为指控他堵住警察，在所有指控中这个属于最重的指控。
-
-根据周四安省法院规定，金，里奇和其他组织者的银行账号暂时被冻结，包括比特币和其他虚拟币。
-
-直到周六早些时候，已有21辆车子被拖走，在周五的警察行动中，被录下一位老妇人警察的马踩踏。曾有传言说老妇人已死亡，目前还不明确。在另一段录像中显示警察用枪柄击打抗议者的脸。同时，今天联邦议员开始辩论是否可以应用紧急法对付抗议者。
-
-##### 新闻来源： [Ottawa Arrests Top 100 As “Freedom Convoy” Organizers Face Judge For First Time](https://www.zerohedge.com/markets/ottawa-arrests-top-100-freedom-convoy-organizers-face-judge-first-time)
-
-#  
+编译：花岗岩
+![](https://assets.gnews.org/wp-content/uploads/2022/02/2-86.jpg)
 
 
+图片来源：网络截图
+
+据合众国际社2月19日报道，俄罗斯总统普京在可能入侵乌克兰的持续紧张局势下，在周六主持了核演习。克里姆林宫说，俄罗斯在海上发射了具有核能力的高超音速导弹和巡航导弹，普京和白俄罗斯总统亚历山大·卢卡申科在克里姆林宫的情况室观看了演习。
+
+克里姆林宫在周四表示，如果美国不同意莫斯科提出的禁止乌克兰和格鲁吉亚，这两个曾是苏联一部分的分离国家加入北约的要求，俄罗斯可能会“被迫做出回应”。
+
+在美国和北约认为乌克兰拒绝了这一要求后克里姆林宫随即周五宣布，战略导弹试验将在周六进行。
+
+美国国防部长劳埃德·奥斯汀（Lloyd Austin）周六警告说，俄罗斯正朝着有可能入侵乌克兰的方向发展，因此周六的演习似乎是精心安排的，以阻止西方军队在日益紧张的局势下介入乌克兰。
+
+奥斯汀在立陶宛维尔纽斯与波罗的海领导人会晤后说俄罗斯正在展开行动，现在已经准备好进行攻击。他还重申了美国总统拜登周五的说法，即普京已经做出了入侵乌克兰的决定。
+
+美国副总统卡马拉·哈里斯周六在德国参加慕尼黑安全会议时补充说，美国和盟国将实施经济处罚，包括“那些同谋和援助指导”可能“无端入侵”乌克兰的人。
+
+另外，据《华盛顿邮报》报道，，乌克兰国防部长奥列克西·雷兹尼科夫（Oleksii Reznikov）周六说，在过去几天俄罗斯支持的分离主义分子在乌克兰东部的炮击升级的报道中，已经造成两名乌克兰士兵死亡，另有五人受伤。
+
+国防部长告诉《邮报》，乌克兰军队不打算发动攻势，但基辅将“不允许对我们部队的阵地和人类居住区进行射击而不受惩罚”。
+
+新闻来源：[Putin presides over nuclear drills Saturday amid Ukraine tensions](https://www.upi.com/Top_News/World-News/2022/02/19/nuclear-drills-ukraine-tensions/3681645294399/)
 
  
 
