--- a/gnews/6.md
+++ b/gnews/6.md
@@ -1,29 +1,26 @@
 ---
-title: 以色列取消了绿色护照，只留下意大利作为大型制药厂的小豚鼠
+title: 渥太华抓捕了100名“为自由护航”组织者
 ---
-`xiaobaige` [轉載自GNews](https://gnews.org/zh-hans/2036206/)
+`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/2036214/)
 
-#### 翻译/简评             意大利达芬奇农场                   小白鸽
-![](https://assets.gnews.org/wp-content/uploads/2022/02/Schermata-2022-02-20-alle-11.44.54-2.png)图片来源：lantidiplomatico.it
-在感染率明显降低的情况下，2月17日以色列总理纳夫塔利•贝内特(Naftali Bennett)宣布将取消疫苗护照，实际上只留下了意大利作为美国大型制药公司的小豚鼠。
+翻译：  Evalu
+![](https://assets.gnews.org/wp-content/uploads/2022/02/1-306.jpg)
+图片来源： www.iask.ca
+零对冲网2月19日报道，渥太华警察抓捕了100名“为自由护航”抗议组织者，包括塔玛拉·里奇，帕特·金和克里斯·巴勃，他们于周五被捕，周六首次面对法官，他们被一系列最轻指控传唤，包括指导恶作剧，指导服从法庭和堵住警察。
 
-以色列（世界小豚鼠实验室）是最早要求疫苗证明而实行大规模的疫苗注射宣传的国家之一（相当于意大利的超级绿色护照）。
+警察周五采用一系列进攻性技术冲散抗议者，渥太华警察否认他们用催泪瓦斯，相反，他们说是抗议者用汽油对付他们。
 
-贝内特说鉴于新冠病毒感染数量明显降低，证明现在是取消强制疫苗护照的“很好的时机”。
+法官让巴勃支付10万债券以保释，他目前没有在公众面前露面，而金和里奇和其他人周六出现在法院，对巴勃的保释金最高，因为指控他堵住警察，在所有指控中这个属于最重的指控。
 
-去年大部分时间以色列人使用绿色护照进入酒吧、旅馆、健身房、宗教场所及其他场所。
+根据周四安省法院规定，金，里奇和其他组织者的银行账号暂时被冻结，包括比特币和其他虚拟币。
 
-虽然比较意大利和以色列媒体，双方都存在着虚假报道，但以色列从来没有禁止未接种疫苗的人不能乘坐公共交通工具，不能工作， 没有任何帮助。2月14日， 成千上万的以色列人组成“自由车队”反新冠病毒限制， 就像发生在加拿大、法国和世界其他地区类似阻碍交通的抗议行为。抗议者手摇以色列和加拿大国旗前往以色列政府所在地。
+直到周六早些时候，已有21辆车子被拖走，在周五的警察行动中，被录下一位老妇人警察的马踩踏。曾有传言说老妇人已死亡，目前还不明确。在另一段录像中显示警察用枪柄击打抗议者的脸。同时，今天联邦议员开始辩论是否可以应用紧急法对付抗议者。
 
-自去年6月贝内特就任以来，他许诺在应付疫情大流行阶段，他会将以色列经济的健康发展放在第一位。他坚持他会做到这一点，可能他的意思是不会采取像德拉吉式的限制措施来限制商业。
+##### 新闻来源： [Ottawa Arrests Top 100 As “Freedom Convoy” Organizers Face Judge For First Time](https://www.zerohedge.com/markets/ottawa-arrests-top-100-freedom-convoy-organizers-face-judge-first-time)
 
-贝内特政府从2月初开始重新审视健康证明的要求，对强制使用的地方加以限制。当第一次发现奥米克戎时，贝内特命令关闭进出以色列的旅行，告诫以色列要准备感染浪潮的到来。他说“以色列是在新一波病毒开始时最先开始采取行动。现在我们要逐渐取消限制。1月份， 以色列曾达到每天新冠感染率八万多，这一事实证明意大利卫生部长斯帕兰察采用的绿色护照方面完全无用。
+#  
 
-简评： 在全世界纷纷解禁，取消疫苗护照之际。意大利的卫生紧急状态还在延续。有150万50岁以上的民众因未接种疫苗或未接种加强针而失去工作，针对50岁以上人的疫苗强制令到目前为止要持续到6月15日， 至今未改变。可以说目前意大利在疫苗强制令方面是世界最严厉的国家。同时没有绿色护照意味着不能去银行、邮局乘坐公共汽车、地铁等最基本的交通工具，而疫苗所带来的各种次生灾难将越演越烈。我们坚信文贵先生所说“强制疫苗一定会停止，疫苗护照一定会取消”。作为疫苗护照最坚定的执行者意大利政府迟早也会改变态度。
 
-原文链接： [https://www.lantidiplomatico.it/dettnews-bennett\_annuncia\_la\_fine\_del\_green\_pass\_in\_israele\_resta\_solo\_litalia\_a\_fare\_da\_cavia\_a\_big\_pharma/38822\_45207/](https://www.lantidiplomatico.it/dettnews-bennett_annuncia_la_fine_del_green_pass_in_israele_resta_solo_litalia_a_fare_da_cavia_a_big_pharma/38822_45207/)
-
-编辑、上传： Xiao   baige
 
  
 
