--- a/gnews/7.md
+++ b/gnews/7.md
@@ -1,83 +1,29 @@
 ---
-title: 我们必须为保护孩子们对邪恶说不（二）
+title: 以色列取消了绿色护照，只留下意大利作为大型制药厂的小豚鼠
 ---
-`西班牙巴塞罗那喜悦农场` [轉載自GNews](https://gnews.org/zh-hans/2036160/)
+`xiaobaige` [轉載自GNews](https://gnews.org/zh-hans/2036206/)
 
-**编译：The world，weiwei**
+#### 翻译/简评             意大利达芬奇农场                   小白鸽
+![](https://assets.gnews.org/wp-content/uploads/2022/02/Schermata-2022-02-20-alle-11.44.54-2.png)图片来源：lantidiplomatico.it
+在感染率明显降低的情况下，2月17日以色列总理纳夫塔利•贝内特(Naftali Bennett)宣布将取消疫苗护照，实际上只留下了意大利作为美国大型制药公司的小豚鼠。
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/tempsnip我们必须为保护孩子们对邪恶说不（一）-1.png)图片来源：banned.video
+以色列（世界小豚鼠实验室）是最早要求疫苗证明而实行大规模的疫苗注射宣传的国家之一（相当于意大利的超级绿色护照）。
 
-【接上篇：**我们必须为保护孩子们对邪恶说不（一）】**
+贝内特说鉴于新冠病毒感染数量明显降低，证明现在是取消强制疫苗护照的“很好的时机”。
 
-首先是《今日美国》，还有雅虎新闻，到处都是与联合国有关的团体要废除家庭，他们是种族主义者。
+去年大部分时间以色列人使用绿色护照进入酒吧、旅馆、健身房、宗教场所及其他场所。
 
-让国家在公共设施中对儿童进行抚养吧，这就是大重置。也就是新共产主义。你得去看看我们在周日节目上关于这个的视频。
+虽然比较意大利和以色列媒体，双方都存在着虚假报道，但以色列从来没有禁止未接种疫苗的人不能乘坐公共交通工具，不能工作， 没有任何帮助。2月14日， 成千上万的以色列人组成“自由车队”反新冠病毒限制， 就像发生在加拿大、法国和世界其他地区类似阻碍交通的抗议行为。抗议者手摇以色列和加拿大国旗前往以色列政府所在地。
 
-这里有一个专栏，加州应该以公平的名义，以平等的名义废除父母的权利，他们就是这么说的。这是对人类的破坏正在进行时。
+自去年6月贝内特就任以来，他许诺在应付疫情大流行阶段，他会将以色列经济的健康发展放在第一位。他坚持他会做到这一点，可能他的意思是不会采取像德拉吉式的限制措施来限制商业。
 
-就像新冠的疫苗正在导致金融崩溃，他们解雇了所有这些聪明的人，因为们不愿意使用疫苗，或者因为他们使用了第一针疫苗后生病了，所以，他们不希望打第二针或第三针。
+贝内特政府从2月初开始重新审视健康证明的要求，对强制使用的地方加以限制。当第一次发现奥米克戎时，贝内特命令关闭进出以色列的旅行，告诫以色列要准备感染浪潮的到来。他说“以色列是在新一波病毒开始时最先开始采取行动。现在我们要逐渐取消限制。1月份， 以色列曾达到每天新冠感染率八万多，这一事实证明意大利卫生部长斯帕兰察采用的绿色护照方面完全无用。
 
-你生病了，他们让你去打加强剂，不然就把你给解雇了。哦，事情开始崩溃得太厉害了，这就是他们的计划。所以我今天想明白了。
+简评： 在全世界纷纷解禁，取消疫苗护照之际。意大利的卫生紧急状态还在延续。有150万50岁以上的民众因未接种疫苗或未接种加强针而失去工作，针对50岁以上人的疫苗强制令到目前为止要持续到6月15日， 至今未改变。可以说目前意大利在疫苗强制令方面是世界最严厉的国家。同时没有绿色护照意味着不能去银行、邮局乘坐公共汽车、地铁等最基本的交通工具，而疫苗所带来的各种次生灾难将越演越烈。我们坚信文贵先生所说“强制疫苗一定会停止，疫苗护照一定会取消”。作为疫苗护照最坚定的执行者意大利政府迟早也会改变态度。
 
-他们说诺瓦克-德约科维奇在被澳大利亚驱逐出境后回到了塞尔维亚的贝尔格莱德。而所有的报道都像我今天早上三、四点钟看了的一样。都说他活该，因为他是个麻烦制造者，不愿意接受那肮脏的疫苗。现在另一个人拿到冠军了，那人是个¨好孩子。¨
+原文链接： [https://www.lantidiplomatico.it/dettnews-bennett\_annuncia\_la\_fine\_del\_green\_pass\_in\_israele\_resta\_solo\_litalia\_a\_fare\_da\_cavia\_a\_big\_pharma/38822\_45207/](https://www.lantidiplomatico.it/dettnews-bennett_annuncia_la_fine_del_green_pass_in_israele_resta_solo_litalia_a_fare_da_cavia_a_big_pharma/38822_45207/)
 
-比赛继续进行，让我们制造更多这样的事件。体育界人士和其他人会开始说不！他们不会成为系统中的奴隶。
-
-我们需要更多像德约科维奇这样的人。我们需要一个德约科维奇奖，因为他做了正确的事情，说了不！ 他可是连续九次赢得冠军。
-
-现在法国也说他不能来参加下一次活动。很好，我们需要更多的网球运动员去反抗，去说不！
-
-约科维奇可以用假的疫苗文件，说他打疫苗了，但他没有这样做。而国家橄榄球联盟，他们就是这么干的，这就是为什么他们都没事。  在欧洲，人们排着队，听从命令，打疫苗。
-
-在纽约的福特汉姆大学，提出新的新冠限制条例禁止学生喝水。邪教总是有一些新仪式需要你去完成。就像你不能直视别人的眼睛。
-
-CDC建议取消橄榄球，并在几乎所有的美国学校禁止橄榄球，这被称为不现实的，这一切都只是在制造恐惧。你需要维生素和矿物质，这样你才能健康。
-
-兰德-保罗现在想知道，如果CDC承认棉布口罩没有用，会给你带来细菌、肺炎，YouTube 是否会拍我的马屁给我道歉？！
-
-而且戴口罩可能比不戴口罩更容易传播新冠或任何其他疾病，因为它让颗粒物在口罩和水泡中堆积结块，然后气溶胶化。
-
-大型新研究出来了，疾病预防控制中心被迫说口罩没有任何作用。但你认为强制戴口罩会停止吗？这是他们的Binky，这是他们的Baba，这就是他们的吉格利。
-
-那是他们的小被子，是我们的孩子们为他们盖的被子起的名字。Gligly、Binkie和Baba。
-
-我四岁的孩子把他的被子叫吉格利，我想说的是，这些口罩就是他们的吉格利。女士们，先生们，这太荒谬了，现在我们正在用这些东西折磨我们的孩子。
-
-我在奥斯汀的一家商店里看到了这个被出售的东西，Little Buddies by Fiesta Plush mask，你的口罩小兄弟。在你不注意的时候，这就是如何让小孩学会被奴役的口罩。平均而言，普通口罩降低氧气吸入达20%，增加了二氧化碳中毒的可能性。
-
-我想，律师们在后面写了什么。  果然，重要的内容都在后面，上面写着：如何使用和保养你的小伙伴口罩。
-
-如果你在佩戴你的小伙伴口罩时出现呼吸困难，请立即将其取下。哦，好吧，我们有呼吸困难，不要戴着你的小伙伴口罩睡觉，因为它可以杀死你。
-
-12.99美元，你还不如叫它教父里面的小伙伴，就像主角在哈瓦那的医院里用毯子或枕头将别人窒息谋杀的地方，这上面有过滤器，然后上面有所有这些其他布料。
-
-因此，你可怜的孩子实际上是在和他们的小伙伴口罩一起喘息着度过这一切，让我看看我是否能和小伙伴一起在这里呼吸。
-
-我已经被绑架了，就像患上了幽闭恐惧症。邪教的计划只想要系统性的虐待我们的孩子，真是可恶的东西！
-
-这个系统是由一群有恋童癖、崇拜魔鬼的人渣管理的，他们坐在那里告诉你把这个厚重的东西放在孩子的脸上。
-
-他们迫使你承认我们是一种疾病，我们是肮脏的，我们是坏的，我们必须沉默，必须按照他们说的去做。
-
-但是，我要告诉你，如果你觉得不舒服，就把它从我们的小伙伴身上拿下来。睡觉的时候不要带着它，否则小伙伴可能就会回不来了。
-
-所以，我们必须要为保护我们的孩子而站出来说不！因为，他们正在指望着我们。
-
-说明：
-
-“本文章取材于亚历克斯-琼斯，亚历克斯-琼斯是著名的信息战争网站的创始人和主持人。在2018年遭到所有主流社交平台的封杀。现在仍然活跃在反对疫苗的前线”
-
-**新闻来源**：[banned.video][The Mass Formation Psychosis Push to Suffocate our Children and End Humanity Exposed](https://www.banned.video/watch?id=61e5f06faf1fcf7b54eb98b1)
-
-* * *
-
-***审核：阿伯塔
-校对：花羽
-发布：信心满满***
-
-![](https://assets.gnews.org/wp-content/uploads/2022/02/西喜-5.jpeg)
-
-
+编辑、上传： Xiao   baige
 
  
 
